--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/html_ui/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/CDU/A320_Neo_CDU.html
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/html_ui/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/CDU/A320_Neo_CDU.html
@@ -32,6 +32,7 @@
 <script type="text/html" import-script="/JS/simbridge-client/simbridge-client.js"></script>
 <script type="text/html" import-script="/JS/fmgc/LzUtf8.js"></script>
 <script type="text/html" import-script="/JS/fmgc/fmgc.js"></script>
+<script type="text/html" import-script="/JS/cids/cids.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SearchField.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/NearestWaypoint.js"></script>
 
